--- a/PandasTutorial/Series_intro.ipynb
+++ b/PandasTutorial/Series_intro.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "718195cd-990d-49a8-9006-64036a300061",
    "metadata": {},
    "outputs": [
@@ -49,6 +49,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "name             [Bishal, Anoj, khusi]\n",
+      "country    [Japan, America, Austraila]\n",
+      "dtype: object\n",
       "name             [Bishal, Anoj, khusi]\n",
       "country    [Japan, America, Austraila]\n",
       "dtype: object\n"
@@ -63,6 +66,7 @@
     "        }\n",
     "\n",
     "e = pd.Series(dict) # #using double index\n",
+    "print(e)\n",
     "print(e)"
    ]
   }
