--- a/PandasTutorial/Series_intro.ipynb
+++ b/PandasTutorial/Series_intro.ipynb
@@ -41,7 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "8ee4c955-8483-4767-9ce5-9ff0f44b1f33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "718195cd-990d-49a8-9006-64036a300061",
    "metadata": {},
    "outputs": [
@@ -49,6 +57,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "name             [Bishal, Anoj, khusi]\n",
+      "country    [Japan, America, Austraila]\n",
+      "dtype: object\n",
       "name             [Bishal, Anoj, khusi]\n",
       "country    [Japan, America, Austraila]\n",
       "dtype: object\n",
@@ -66,6 +77,7 @@
     "        }\n",
     "\n",
     "e = pd.Series(dict) # #using double index\n",
+    "print(e)\n",
     "print(e)\n",
     "print(e)"
    ]
