--- a/PandasTutorial/ViewingData.ipynb
+++ b/PandasTutorial/ViewingData.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "69cec8c5-16b1-4957-8ff6-9cb690f2a5b9",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,6 +384,48 @@
     "\n",
     "#display \n",
     "data_bottom "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0bb633cf-b0a5-4830-9358-2426f1908394",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    457.000000\n",
+       "mean      17.678337\n",
+       "std       15.966090\n",
+       "min        0.000000\n",
+       "25%        5.000000\n",
+       "50%       13.000000\n",
+       "75%       25.000000\n",
+       "max       99.000000\n",
+       "Name: Number, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Pandas DataFrame Describe() Method\n",
+    "\n",
+    "#importing pandas module\n",
+    "import pandas as pd\n",
+    "\n",
+    "#making a data frame\n",
+    "data = pd.read_csv(\"https://media.geeksforgeeks.org/wp-content/uploads/nba.csv\") #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\n",
+    "\n",
+    "#calling function describe\n",
+    "#stroing in new variable \n",
+    "data_dis = data[\"Number\"].describe()\n",
+    "\n",
+    "#display \n",
+    "data_dis"
    ]
   }
  ],
