--- a/PandasTutorial/Slice and Selecting.ipynb
+++ b/PandasTutorial/Slice and Selecting.ipynb
@@ -276,7 +276,7 @@
     "data = pd.read_csv('https://media.geeksforgeeks.org/wp-content/uploads/nba.csv', index_col= \"Name\")\n",
     "\n",
     "#drop data column \n",
-    "data.drop(['Age','Height'], axis = 1, inplace=True)\n",
+    "data.drop(['Age','Height'], axis = 1, inplace=True) #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\n",
     "#display data\n",
     "data"
    ]
