--- a/PandasTutorial/Slice and Selecting.ipynb
+++ b/PandasTutorial/Slice and Selecting.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "cff5946e-aa32-4a0f-9001-cb3f22d75454",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "[458 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,6 +279,44 @@
     "data.drop(['Age','Height'], axis = 1, inplace=True) #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\n",
     "#display data\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9e299f4e-31cf-4b9f-8d14-7897d1df940e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team        Utah Jazz\n",
+      "Number           25.0\n",
+      "Position           PG\n",
+      "Age              24.0\n",
+      "Height            6-1\n",
+      "Weight          179.0\n",
+      "College           NaN\n",
+      "Salary       900000.0\n",
+      "Name: Raul Neto, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Pandas Extracting rows using.loc[]\n",
+    "\n",
+    "#importing the pandas module \n",
+    "import pandas as pd\n",
+    "\n",
+    "#Reading the csv\n",
+    "data = pd.read_csv('https://media.geeksforgeeks.org/wp-content/uploads/nba.csv', index_col=\"Name\")\n",
+    "\n",
+    "#using loc[] method for get specific value \n",
+    "first = data.loc[\"Raul Neto\"]\n",
+    "second = data.loc[\"Jeff Withey\"]\n",
+    "#data display\n",
+    "print(first,\"\\n\\n\\n\",second)"
    ]
   }
  ],
